--- a/code/core/static/css/core.css
+++ b/code/core/static/css/core.css
@@ -49,7 +49,7 @@ h3, .h3 {
 }
 
 .cell .text {
-    max-height: 50px;
+    max-height: 55px;
     overflow: hidden;
 }
 
@@ -73,5 +73,10 @@ h3, .h3 {
 
 #labels .panel, #details .panel {
     margin-top: 15px;
+}
+
+#labels .panel-body .row:nth-child(odd),
+#details .panel-body .row:nth-child(odd)  {
+    background-color: #F9F9F9;
 }
 
