--- a/code/core/static/css/core.css
+++ b/code/core/static/css/core.css
@@ -71,9 +71,9 @@ h3, .h3 {
     box-shadow: none;
 }
 
-#labels .panel, #details .panel {
-    margin-top: 15px;
-}
+/*#labels .panel, #details .panel {*/
+    /*margin-top: 15px;*/
+/*}*/
 
 #labels .panel-body .row:nth-child(odd),
 #details .panel-body .row:nth-child(odd)  {
