--- a/code/templates/core/details_manufacturers.html
+++ b/code/templates/core/details_manufacturers.html
@@ -28,8 +28,8 @@
             <div role="tabpanel" class="tab-pane active" id="labels">
                 <!-- accordion panel groups -->
                 <div class="panel-group" aria-multiselectable="true">
-
                     {% for result in labels %}
+
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
@@ -63,6 +63,7 @@
                                 </div>
                             </div>
                         </div>
+
                     {% endfor %}
                 </div>
             </div>
@@ -150,28 +151,28 @@
                   </div>
                   <div class="panel-collapse collapse" id="tab3_panel{{ forloop.counter }}">
                     <div class="panel-body">
+                      <table class="table table-striped table-bordered">
+                        <tbody>
                         {% for key, value in result.items %}
-                            <div class="row">
-                                <div class="col-sm-3 col-xs-12">
-                                    <strong>{{ key|replace_underscores }}</strong>
-                                </div>
-                                <div class="col-sm-9 col-xs-12 cell">
-                                   <div class="text">
-                                       {% if value|is_list %}
-                                       {% for val in value %}
-                                       {{ val }}
-                                       {% endfor %}
-                                       {% else %}
-                                       {{ value }}
-                                       {% endif %}
+                          <tr>
+                             <td>{{ key }}</td>
+                             <td class="cell">
+                               <div class="text">
+                               {% if value|is_list %}
+                               {% for val in value %}
+                               {{ val }}
+                               {% endfor %}
+                               {% else %}
+                               {{ value }}
+                               {% endif %}
                                </div>
                                <span class="more">More...</span>
                                <span class="less" style="display:none;">Less...</span>
-                             </div>
-                           </div>
+                             </td>
+                           </tr>
                          {% endfor %}
-                         </div>
-                      </div>
+                         </tbody>
+                      </table>
                     </div>
                   </div>
                 {% endfor %}
