Made display fixes: capitalize first letter for fields and handle both none and empty strings to display N/A instead

--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -44,13 +44,13 @@
                                  <tbody>
                                    {% for key, value in result.safety_data.items %}
                                    <tr>
-                                     <td>{{ key|replace_underscores }}</td>
+                                     <td>{{ key|replace_underscores|capfirst }}</td>
                                      <td>{% if value|is_list %}
                                            {% for val in value %}
-                                             {{ val|default_if_none:"N/A" }}<br />
+                                             {{ val|default:"N/A" }}<br />
                                            {% endfor %}
                                          {% else %}
-                                           {{ value|default_if_none:"N/A" }}
+                                           {{ value|default:"N/A" }}
                                          {% endif %}
                                      </td>
                                    </tr>
@@ -64,13 +64,13 @@
                                <tbody>
                                    {% for key, value in result.patient_data.items %}
                                    <tr>
-                                     <td>{{ key|replace_underscores }}</td>
+                                     <td>{{ key|replace_underscores|capfirst }}</td>
                                      <td>{% if value|is_list %}
                                            {% for val in value %}
-                                             {{ val|default_if_none:"N/A" }}<br />
+                                             {{ val|default:"N/A" }}<br />
                                            {% endfor %}
                                          {% else %}
-                                           {{ value|default_if_none:"N/A" }}
+                                           {{ value|default:"N/A" }}
                                          {% endif %}
                                      </td>
                                    </tr>
@@ -84,13 +84,13 @@
                                <tbody>
                                    {% for key, value in result.label_data.items %}
                                    <tr>
-                                     <td>{{ key|replace_underscores }}</td>
+                                     <td>{{ key|replace_underscores|capfirst }}</td>
                                      <td>{% if value|is_list %}
                                            {% for val in value %}
-                                             {{ val|default_if_none:"N/A" }}<br />
+                                             {{ val|default:"N/A" }}<br />
                                            {% endfor %}
                                          {% else %}
-                                           {{ value|default_if_none:"N/A" }}
+                                           {{ value|default:"N/A" }}
                                          {% endif %}
                                      </td>
                                    </tr>
