--- a/code/templates/core/details_enforcement_reports.html
+++ b/code/templates/core/details_enforcement_reports.html
@@ -42,7 +42,7 @@
                                     {% for key, value in result.items %}
                                         <div class="row">
                                             <div class="col-sm-3 col-xs-12">
-                                                <strong>{{ key|replace_underscores }}</strong>
+                                                <strong>{{ key|replace_underscores|capfirst }}</strong>
                                             </div>
                                             <div class="col-sm-9 col-xs-12 cell">
                                                 <div class="text">
